frontend/ingress.yaml
apiVersion: networking.k8s.io/v2
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: /site
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
